<resources>
    <string name="app_name">calcApp</string>
    <string name="_7">7</string>
    <string name="_3">3</string>
    <string name="dot">.</string>
    <string name="clr">CLR</string>
    <string name="plus">+</string>
    <string name="eq">=</string>
    <string name="substract">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="x">X</string>
    <string name="_8">8</string>
</resources>